--- a/site/data/members/ashuraaa.toml
+++ b/site/data/members/ashuraaa.toml
@@ -1,4 +1,4 @@
-name = "Joaquin "ashura" Stirling"
+name = "Joaquin Stirling"
 email = "ashes13@outlook.com"
 avatar = "https://avatars2.githubusercontent.com/u/25124333?v=3"
 bio = "Estudiante de bachiller informatico , java . Cursando en Fcc para convertirme en Full stack developer."
