--- a/alvaromesa.toml
+++ b/alvaromesa.toml
@@ -1,10 +1,10 @@
-+name = "Alvaro Mesa"
- +email = "tsi.iamesa@gmail.com"
- +avatar = "https://avatars1.githubusercontent.com/u/24574874?v=3&s=460"
- +bio = "Technical Support aspirando a una carrera como programador"
- +
- +web = "http://2bon2b.me/"
- +github = "TSIIAM"
- +twitter = "TecSIMesa"
- +linkedin = "https://uy.linkedin.com/in/alvaro-mesa-469748134"
- +
+name = "Alvaro Mesa"
+ email = "tsi.iamesa@gmail.com"
+ avatar = "https://avatars1.githubusercontent.com/u/24574874?v=3&s=460"
+ bio = "Technical Support aspirando a una carrera como programador"
+ 
+ web = "http://2bon2b.me/"
+ github = "TSIIAM"
+ twitter = "TecSIMesa"
+ linkedin = "https://uy.linkedin.com/in/alvaro-mesa-469748134"
+ 
