--- a/site/config.toml
+++ b/site/config.toml
@@ -3,6 +3,11 @@ languageCode = "es-uy"
 title = "FCC Montevideo"
 googleAnalytics = "UA-69160067-3"
 
+
 [params]
 description = "Comunidad Free Code Camp Montevideo"
 disqusShortname = "free-code-camp-montevideo"
+facebookGroup = "https://www.facebook.com/groups/free.code.camp.montevideo"
+twitter = "https://twitter.com/fccmontevideo"
+githubOrg = "https://github.com/FreeCodeCampMontevideo"
+youtube = "https://www.youtube.com/channel/UCTIYpVhXmFgTZ9CiuAU22Rw"
