Add nick field to members data files

--- a/site/data/members/ashuraaa.toml
+++ b/site/data/members/ashuraaa.toml
@@ -1,3 +1,4 @@
+nick = "ashuraaa"
 name = "Joaquin Stirling"
 email = "ashes13@outlook.com"
 avatar = "https://avatars2.githubusercontent.com/u/25124333?v=3"
