--- a/site/data/members/matiasvj.toml
+++ b/site/data/members/matiasvj.toml
@@ -1,3 +1,4 @@
+nick = "matiasvj"
 name = "Matías Verdier"
 email = "verdier.matias@gmail.com"
 avatar = "https://avatars2.githubusercontent.com/u/5176883?v=3"
