--- a/site/data/members/susumo.toml
+++ b/site/data/members/susumo.toml
@@ -1,3 +1,4 @@
+nick = "susumo"
 name = "Susumo Fabian"
 email = "fabian.gargaglione@gmail.com"
 avatar = "https://avatars.githubusercontent.com/fabiangarga"
