--- a/site/data/members/alvaromesa.toml
+++ b/site/data/members/alvaromesa.toml
@@ -1,3 +1,4 @@
+nick = "alvaromesa"
 name = "Alvaro Mesa"
 email = "tsi.iamesa@gmail.com"
 avatar = "https://avatars1.githubusercontent.com/u/24574874?v=3&s=460"
