chang avatar url to https
this fix mixed content security warning

--- a/site/data/members/annata.toml
+++ b/site/data/members/annata.toml
@@ -1,4 +1,4 @@
 nick = "annata"
 name = "Nicolas Villafan"
 email = "nicolas.villafan@gmail.com"
-avatar = "http://res.cloudinary.com/annata83/image/upload/v1488354514/face-profile_zzoh8o.jpg"
+avatar = "https://res.cloudinary.com/annata83/image/upload/v1488354514/face-profile_zzoh8o.jpg"
