--- a/src/cms/config.yml
+++ b/src/cms/config.yml
@@ -1,7 +1,7 @@
 backend:
   name: github
   repo: <% GITHUB_REPOSITORY %> # Gulp will replace this with your GitHub repository
-  branch: master # Branch to update (master by default)
+  branch: staging # Branch to update (master by default)
 
 media_folder: "site/static/img" # Folder where user uploaded files should go
 public_folder: "img"
