add offline support

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "hugo": "gulp hugo",
     "webpack": "gulp webpack",
     "build": "gulp build",
+    "postbuild": "gulp generate-service-worker",
     "build-preview": "gulp build-preview",
     "start": "gulp server",
     "lint": "eslint src"
@@ -51,6 +52,7 @@
     "gulp-inject": "^4.2.0",
     "gulp-svgmin": "^1.2.3",
     "gulp-svgstore": "^6.1.0",
-    "svg-sprite-loader": "^0.1.2"
+    "svg-sprite-loader": "^0.1.2",
+    "sw-precache": "^5.2.0"
   }
 }
