--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "hugo": "gulp hugo",
     "webpack": "gulp webpack",
-    "build": "gulp build",
-    "postbuild": "gulp generate-service-worker",
+    "build": "gulp build && gulp generate-service-worker",
     "build-preview": "gulp build-preview",
     "start": "gulp server",
     "lint": "eslint src"
