--- a/site/data/members/alvaromesa.toml
+++ b/site/data/members/alvaromesa.toml
@@ -4,7 +4,7 @@ email = "tsi.iamesa@gmail.com"
 avatar = "https://avatars1.githubusercontent.com/u/24574874?v=3&s=460"
 bio = "Technical Support aspirando a una carrera como programador"
 
-web = "http://2bon2b.me/"
+web = "http://alvaromesa.com"
 github = "TSIIAM"
 twitter = "TecSIMesa"
 linkedin = "https://uy.linkedin.com/in/alvaro-mesa-469748134"
