--- a/package.json
+++ b/package.json
@@ -14,36 +14,36 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "autoprefixer": "^6.6.0",
     "babel-eslint": "^6.1.2",
-    "babel-loader": "^6.2.4",
+    "babel-loader": "^7.0.0",
     "babel-plugin-syntax-object-rest-spread": "^6.13.0",
     "babel-plugin-transform-class-properties": "^6.10.2",
     "babel-plugin-transform-object-assign": "^6.8.0",
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
-    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-env": "1.6.0",
     "babel-register": "^6.11.6",
     "browser-sync": "^2.13.0",
-    "css-loader": "^0.23.1",
+    "css-loader": "^0.28.2",
     "cssnano": "^3.9.1",
     "date-fns": "^1.27.2",
     "eslint": "^3.1.1",
     "eslint-plugin-import": "^1.11.1",
     "exports-loader": "^0.6.3",
-    "file-loader": "^0.9.0",
+    "file-loader": "^0.11.1",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-postcss": "^6.1.1",
     "gulp-replace": "^0.5.4",
     "gulp-util": "^3.0.7",
-    "imports-loader": "^0.6.5",
+    "gulp-watch": "^4.3.11",
+    "imports-loader": "^0.7.1",
     "postcss-cssnext": "^2.7.0",
-    "postcss-import": "^8.1.2",
+    "postcss-import": "^10.0.0",
     "postcss-loader": "^0.9.1",
     "postcss-uncss": "^0.14.0",
     "uncss": "^0.14.1",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.1",
+    "webpack": "3.6.0",
     "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
